# tardisbase

./: .buildinfo  .gitignore  MANIFEST.in  README.md  README.rst  api.html  compare_commits.html  conda-lock.yml  env-bench.yml  env-benchmark-linux.yml  env-benchmark-macos.yml  env-benchmark.yml  env.yml  genindex.html  index.html  installation.html  installation.rst  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/api/: tardisbase.rst.txt  tardisbase.testing.regression_comparison.rst.txt  tardisbase.testing.regression_comparison.visualization.rst.txt
_static/: documentation_options.js
api/: modules.html  tardisbase.html  tardisbase.testing.html  tardisbase.testing.regression_comparison.analyzers.html  tardisbase.testing.regression_comparison.compare.html  tardisbase.testing.regression_comparison.file_manager.html  tardisbase.testing.regression_comparison.html  tardisbase.testing.regression_comparison.util.html  tardisbase.testing.regression_comparison.visualization.html  tardisbase.testing.regression_comparison.visualize_files.html  tardisbase.testing.regression_data.hdfwriter.html  tardisbase.testing.regression_data.html  tardisbase.testing.regression_data.regression_data.html
branch/base-files/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
contributing/: index.html
contributing/development/: index.html  numba_0.61.2_llvm15.html  numba_0.63.1_llvm20.html  numba_0.63.1_llvm20.ipynb  sporadic_linux_test_failure.html  unpinning_2026.html
docs/: compare_commits.ipynb  conf.py  index.rst  installation.rst
docs/_templates/: layout.html
docs/contributing/: index.rst
licenses/: LICENSE.rst
pull/11/: .buildinfo  genindex.html  index.html  installation.html  search.html  searchindex.js
pull/12/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
pull/13/: .buildinfo  genindex.html  index.html  installation.html  search.html  searchindex.js
pull/14/: .buildinfo  genindex.html  index.html  installation.html  search.html  searchindex.js
pull/15/: .buildinfo  api.html  (+7 more)
tardisbase/: __init__.py  _version.py  example_mod.py
(+594 files in other folders)
