[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
  "extension-helpers",
  "numpy>=1.25",
  "cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "tardisbase"
description = "TARDIS main code modules"
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
dependencies = []
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "tardisbase.example_mod:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "gitpython"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/tardis-sn/tardisbase"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["tardisbase*"]
exclude = ["tardisbase._dev*"]

[tool.setuptools_scm]
version_file = "tardisbase/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "tardisbase",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
norecursedirs = ["tardisbase[\\/]_dev"]

[tool.coverage.run]
omit = [
 "tardisbase/__init*",
 "tardisbase/conftest.py",
 "tardisbase/*setup_package*",
 "tardisbase/tests/*",
 "tardisbase/*/tests/*",
 "tardisbase/extern/*",
 "tardisbase/version*",
 "*/tardisbase/__init*",
 "*/tardisbase/conftest.py",
 "*/tardisbase/*setup_package*",
 "*/tardisbase/tests/*",
 "*/tardisbase/*/tests/*",
 "*/tardisbase/extern/*",
 "*/tardisbase/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
